--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,18 @@ php:
   - 5.6
   - 5.5
   - hhvm
+
 before_install:
   - composer self-update
   - composer create-project laravel/laravel
   - cd ./laravel
-  - composer require comocode/laravel-ab dev-master
+  - composer require comocode/laravel-ab dev-travis
   - composer update
   - touch storage/database.sqlite
-  - cp .vendor/comocode/laravel-ab/tests/source/laravel/app.php ./config/app.php
+  - php artisan ab:migrate
+  - cp ./vendor/comocode/laravel-ab/tests/source/laravel/app.php ./config/app.php
+  - cp ./vendor/comocode/laravel-ab/tests/source/laravel/routes.php ./app/Http/routes.php
+  - $(nohup php artistan serve &)
   - cd ./vendor/comocode/laravel-ab
 
 script: "phpunit"
