--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/database.php ./config/database.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/routes.php ./app/Http/routes.php
   - php artisan ab:migrate
-  - $(nohup php artistan serve &)
+  - nohup php artistan serve &
   - cd ./vendor/comocode/laravel-ab
 
 script: "phpunit"
