--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ language: php
 php:
   - 5.6
   - 5.5
+  - 7
   - hhvm
 
 before_install:
   - composer self-update
-  - composer create-project laravel/laravel=5.1.11
+  - composer create-project laravel/laravel --prefer-dist
   - cd ./laravel
   - composer require comocode/laravel-ab dev-master
   - composer update
@@ -16,7 +17,7 @@ before_install:
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/database.php ./config/database.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/routes.php ./app/Http/routes.php
   - php artisan ab:migrate
-  - nohup php artistan serve &
+  - nohup php artisan serve &
 
 script: "phpunit ./vendor/comocode/laravel-ab/tests/AbTests.php"
 
