bypassing prompt for migrate on tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/app.php ./config/app.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/database.php ./config/database.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/routes.php ./app/Http/routes.php
-  - php artisan ab:migrate
+  - php artisan ab:migrate --force
   - nohup php artisan serve &
 
 script: "phpunit ./vendor/comocode/laravel-ab/tests/AbTests.php"
