updating composer install to current checkout for test passing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,22 @@ php:
 
 before_install:
   - composer self-update
-  - composer create-project laravel/laravel --prefer-dist
-  - cd ./laravel
-  - composer require comocode/laravel-ab dev-master
-  - composer update
+  - composer create-project laravel/laravel --prefer-dist build/laravel
+  - mkdir -p ./build/laravel/vendor/comocode
+  - ln -s `pwd` ./build/laravel/vendor/comocode/laravel-ab
+  - cd ./build/laravel
   - touch storage/database.sqlite
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/app.php ./config/app.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/database.php ./config/database.php
   - cp ./vendor/comocode/laravel-ab/tests/source/laravel/routes.php ./app/Http/routes.php
+  - sed -e 's/"app\/\"/"app\/","ComoCode\\\\LaravelAb\\\\": "vendor\/comocode\/laravel-ab\/src"/' composer.json > temp.json && mv temp.json composer.json
+  - sed -e s/\)\;/\)/g ./vendor/composer/autoload_classmap.php > temp.php && mv temp.php ./vendor/composer/autoload_classmap.php
+  - cat ./vendor/comocode/laravel-ab/tests/source/laravel/autoload.php >> ./vendor/composer/autoload_classmap.php
+  - composer dump-autoload
   - php artisan ab:migrate --force
   - nohup php artisan serve &
 
 script: "phpunit ./vendor/comocode/laravel-ab/tests/AbTests.php"
-
+after_script:
+  - cd ../../
+  - rm -rf build/
